Closed Bug 291965 Opened 21 years ago Closed 20 years ago

background images with transparency not drawn/redrawn correctly

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jdarmochwal, Assigned: roc)

Details

(Keywords: testcase)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050426 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050426 With the latest nightly build the table background image in mozilla/layout/html/tests/table/marvin/backgr_simple-table.html do not render correctly. I will add a testcase. Reproducible: Always Steps to Reproduce: 1. see testcase Actual Results: background is broken (I will add a screenshot as well) Expected Results: background renders correcly
Attached file testcase
Attached image screenshot of testcase
Keywords: testcase
Attached patch possible fixSplinter Review
This bug is caused by these lines from the fix for bug 287168: + if (haveClip) { + GdkRectangle gdkrect = {clipRect.x + aTileRect.x - aSXOffset, + clipRect.y + aTileRect.y - aSYOffset, + clipRect.width, clipRect.height}; + gdk_gc_set_clip_rectangle(tileGC, &gdkrect); + } Using + GdkRectangle gdkrect = {clipRect.x, clipRect.y, + clipRect.width, clipRect.height}; instead seems to work fine, but someone who knows this code should check that.
Attachment #181931 - Flags: review?(blizzard)
Comment on attachment 181931 [details] [diff] [review] possible fix I'm trying to remember what I was thinking when I wrote that code, but I'm failing. This is clearly the correct code, and it passes my tests. Thanks! This patch fixes a regression I just introduced in Linux clipping.
Attachment #181931 - Flags: superreview+
Attachment #181931 - Flags: review?(blizzard)
Attachment #181931 - Flags: review+
Attachment #181931 - Flags: approval1.8b2?
Assignee: blizzard → roc
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 181931 [details] [diff] [review] possible fix a=asa
Attachment #181931 - Flags: approval1.8b2? → approval1.8b2+
I checked this in yesterday.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: