Bug 291965. Use correct clipping rectangle when drawing 1-bit alpha tiled images in GTK2. r+sr=me,a=asa patch by Jan Darmochwal